# airflow_tiktok_task

./: .gitignore  Makefile  README.md  pyproject.toml  simple_auth_manager_passwords.json.generated
config/: airflow.cfg
core/airflow/dags/: load_to_mongo_dag.py  process_tiktok_data_dag.py
core/airflow/dags/include/: consts.py
core/airflow/dags/include/queries/: query_2.json
core/airflow/dags/include/tasks/: load_to_mongo_tasks.py  process_tiktok_data_tasks.py
core/airflow/dags/utils/tasks/: load_to_mongo_tasks.py  process_tiktok_data_tasks.py
dags/: load_to_mongo_dag.py  process_tiktok_data_dag.py
docker_compose/: airflow.yml  app.yml
include/: base_handler.py  consts.py  csv_handler.py  file_handler.py  mongo_handler.py
include/handlers/: csv_handler.py  file_handler.py  mongo_handler.py
include/tasks/: load_to_mongo_tasks.py  process_tiktok_data_tasks.py
queries/: query_1.json  query_2.json  query_3.json
tests/: test_csv_handler.py  test_mongo_handler.py
