[project]
name = "tik_tok_processing_data_with_airflow"
version = "0.1.0"
description = "Innowise trainee task to learn basic knowledge for Apache Airflow"
authors = [
    {name = "Stanislau Panfilenka",email = "stanislav.panfilenko@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pandas (>=2.3.3,<3.0.0)",
    "apache-airflow (>=3.1.3,<4.0.0)",
    "pymongo (>=4.15.4,<5.0.0)",
    "pre-commit (>=4.5.0,<5.0.0)",
    "black (>=25.11.0,<26.0.0)",
    "flake8 (>=7.3.0,<8.0.0)",
    "isort (>=7.0.0,<8.0.0)",
    "mongomock (>=4.3.0,<5.0.0)",
    "pytest (>=9.0.1,<10.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.flake8]
max-line-length = 88
exclude = ".venv,build,dist"
ignore = "E203, W503"

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true
known_first_party = ["innowise_bigdata_trainee_tasks"]
